Fix select overflowing

--- a/www/less/form.less
+++ b/www/less/form.less
@@ -69,6 +69,8 @@ input[type=checkbox]{
         border-top: none;
         opacity: 0;
         .transition(opacity .3s);
+        max-height: 300px;
+        overflow-y: auto;
 
         .option{
             padding: 0 10px;
